--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="delete">Löschen</string>
     <string name="edit">Ändern</string>
     <string name="info">Info</string>
+    <string name="changeAllowed">Der Artikel kann nun geändert werden!</string>
 </resources>
