ToDos fertig und QR eingebunden

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="id">ID: </string>
     <string name="drucken">Drucken</string>
     <string name="qrcodeActionBar">QrCode Zuweisungstabelle</string>
+    <string name="erledigt">Erledigt</string>
+    <string name="no_template">Keine Vorlagen vorhanden</string>
 </resources>
