all Fragments, fixed warnings and Cal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,33 +1,46 @@
 <resources>
     <string name="app_name">WGApp</string>
-    <string name="vorlage">Vorlage</string>
+    <string name="addTodo">Hinzufügen eines Todos</string>
+    <string name="occupied">Belegt</string>
+    <string name="cal_chooser">Wähle aus einem Kalender aus</string>
+    <string name="change_quantity">Anzahl ändern</string>
+    <string name="changeAllowed">Der Artikel kann nun geändert werden!</string>
+    <string name="content">Beschreibung</string>
     <string name="custom">Custom</string>
-    <string name="qr_code">QR-Code</string>
+    <string name="datum">Datum</string>
+    <string name="delete">Löschen</string>
+    <string name="print">Drucken</string>
+    <string name="edit">Ändern</string>
+    <string name="editQr">QrCode editieren</string>
+    <string name="end">Ende</string>
+    <string name="done">Erledigt</string>
+    <string name="finished">Fertig</string>
+    <string name="id">ID: </string>
+    <string name="info">Info</string>
     <string name="info_qr_scanner">Scanne einen QR Code um die Artikel hinzuzufügen</string>
     <string name="info_qr_scanner_new_code">Tippe in die Kamera um einen neuen Code zu scannen</string>
     <string name="info_qr_scanner_no_permission">Anzeigen ohne Kameraberechtigung nicht möglich</string>
-    <string name="tv_anzahl">Anzahl</string>
-    <string name="tv_Titel">Titel</string>
-    <string name="tv_bezeichnung">Bezeichnung</string>
-    <string name="string_template">Als Vorlage speichern</string>
-    <string name="string_add">Hinzufügen</string>
-    <string name="str_back">Schließen</string>
-    <string name="addTodo">Hinzufügen eines Todos</string>
-    <string name="content">Beschreibung</string>
-    <string name="delete">Löschen</string>
-    <string name="edit">Ändern</string>
-    <string name="info">Info</string>
-    <string name="changeAllowed">Der Artikel kann nun geändert werden!</string>
-    <string name="qrmenu">QrMenu</string>
-    <string name="fertig">Fertig</string>
-    <string name="id">ID: </string>
-    <string name="drucken">Drucken</string>
-    <string name="qrcodeActionBar">QrCode Zuweisungstabelle</string>
-    <string name="erledigt">Erledigt</string>
+    <string name="calendar">Kalender</string>
+    <string name="newQr">Neuer QrCode</string>
     <string name="no_template">Keine Vorlagen vorhanden</string>
-    <string name="week_number">Kalenderwoche:   </string>
+    <string name="qr_code">QR-Code</string>
+    <string name="qrCodeActionBar">QrCode Zuweisungstabelle</string>
+    <string name="qrMenu">QrMenu</string>
+    <string name="shoppingList">ShoppingList</string>
+    <string name="start">Start</string>
+    <string name="str_back">Schließen</string>
+    <string name="string_add">Hinzufügen</string>
+    <string name="string_template">Als Vorlage speichern</string>
+    <string name="thisQrIsNotInDatabase">Diesen QR-Code gibt es nicht. Versuchen sie es erneut!</string>
     <string name="title_activity_main_b_n">MainActivityBN</string>
-    <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
+    <string name="title_home">Home</string>
     <string name="title_notifications">Notifications</string>
+    <string name="todo">Todo</string>
+    <string name="quantity">Anzahl</string>
+    <string name="tv_content">Bezeichnung</string>
+    <string name="title">Titel</string>
+    <string name="time">Uhrzeit</string>
+    <string name="template">Vorlage</string>
+    <string name="week_number">Kalenderwoche: </string>
 </resources>
