first visual updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="change_quantity">Anzahl ändern</string>
     <string name="changeAllowed">Der Artikel kann nun geändert werden!</string>
     <string name="content">Beschreibung</string>
-    <string name="custom">Custom</string>
+    <string name="customArt">Artikel Hinzufügen</string>
+    <string name="customToDo">Eintrag Hinzufügen</string>
     <string name="datum">Datum</string>
     <string name="delete">Löschen</string>
     <string name="print">Drucken</string>
@@ -15,7 +16,7 @@
     <string name="end">Ende</string>
     <string name="done">Erledigt</string>
     <string name="finished">Fertig</string>
-    <string name="id">ID: </string>
+    <string name="id">ID:</string>
     <string name="info">Info</string>
     <string name="info_qr_scanner">Scanne einen QR Code um die Artikel hinzuzufügen</string>
     <string name="info_qr_scanner_new_code">Tippe in die Kamera um einen neuen Code zu scannen</string>
@@ -26,17 +27,14 @@
     <string name="qr_code">QR-Code</string>
     <string name="qrCodeActionBar">QrCode Zuweisungstabelle</string>
     <string name="qrMenu">QrMenu</string>
-    <string name="shoppingList">ShoppingList</string>
+    <string name="shoppingList">Einkaufsliste</string>
     <string name="start">Start</string>
     <string name="str_back">Schließen</string>
+    <string name="cancel">Abbrechen</string>
     <string name="string_add">Hinzufügen</string>
     <string name="string_template">Als Vorlage speichern</string>
     <string name="thisQrIsNotInDatabase">Diesen QR-Code gibt es nicht. Versuchen sie es erneut!</string>
-    <string name="title_activity_main_b_n">MainActivityBN</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_home">Home</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="todo">Todo</string>
+    <string name="todo">ToDo Liste</string>
     <string name="quantity">Anzahl</string>
     <string name="tv_content">Bezeichnung</string>
     <string name="title">Titel</string>
