--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="delete_all_art">Alle abgeschlossenen Artikel gelöscht</string>
     <string name="delete_all_todo">Alle abgeschlossenen Einträge gelöscht</string>
     <string name="logout">Ausloggen</string>
+    <string name="cal_no_entry">kein Eintrag für diese Woche</string>
 </resources>
